Tue Jul 22 17:32:46 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        
          In converting a predefined type in the AST to a CORBA
          pk_kind, added a case in the switch statement for
          ValueBase nodes. Thanks to Frank Pilhofer <fp@mc.com>
          for reporting the problem and supplying a patch.
          This fix closes [BUGID:3372].

Tue Jul 22 17:04:23 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:
        
          In code that writes the IFR Service's IOR to a file,
          replaced use of ACE_OS::write() with ACE_OS:fprintf(),
          which is used in all other ORB services for this purpose.
          This fix closes [BUGID:3371]. Thanks to Frank Pilhofer
          <fp@mc.com> for reporting the problem of the extra
          NULL character in the Bugzilla entry.

Tue Jul 22 11:53:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ZIOP.pdf:
          Added draft ZIOP spec to the documentation. If you want to know
          more about ZIOP check this spec first

Tue Jul 22 11:34:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/ZIOP/*:
          New ZIOP test using zlib

Tue Jul 22 11:31:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        Major commit to add ZIOP to the core of TAO. This adds the capability
        to compress the data on the wire. This is a proof of concept implementation
        that we try to get standardized within the CORBA spec. Interoperability
        with other ORBs and different TAO versions isn't guaranteed until ZIOP
        has been formally adopted by the OMG. If you want to experiment with ZIOP
        add TAO_HAS_ZIOP 1 as define to your config.h file. This prototype will need
        some more work to support ZIOP for the full request/reply chain, in some